fixed spacing for social icons on header, shortened liri description

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ h5{
 .header-title-2{
 	text-align: center;
 	margin-top: 2rem;
-	margin-bottom: 10rem;
+	margin-bottom: 8rem;
 	width: 100%;
 }
 .page-menu{
